--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>html, Javascript, css만을 이용한 Portfolio</h1>
     <a href="/paint/paint.html">Paint</a>
+    <a href="minesweeper/minesweeper.html">MineSweeper</a>
 </body>
 </html>
