--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>html, Javascript, css만을 이용한 Portfolio</h1>
     <a href="/paint/paint.html">Paint</a>
     <a href="minesweeper/minesweeper.html">MineSweeper</a>
+    <a href="2048/2048.html">2048</a>
 </body>
 </html>
