--- a/towerdefence/game.html
+++ b/towerdefence/game.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tower Defence</title>
+    <title>Tower Defence Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main-screen">
-        <h1>Tower Defence</h1>
-    </div>
-    <div id="game-container">
+    <h1>Tower Defence</h1>
+    <div id="game-play-container">
+        <div id="game-info">
+            <div id="game-status-info">
+                <p id="current-level">Level: 1</p>
+                <p id="enemies-remaining">0/20</p>
+                <p id="game-time">Time: 00:00</p>
+                <p id="coins-earned">Coins: 0</p>
+            </div>
+            <div id="controls">
+                <button id="pause-btn">Pause</button>
+                <button id="restart-btn">Restart</button>
+                <button id="quit-btn">Quit</button>
+                <button id="speed-btn">2x Speed</button>
+            </div>
+        </div>
         <canvas id="gameCanvas"></canvas>
-        <footer>
-            <button onclick="goMain()" class="footer-btn">Main</button>
-            <button onclick="goShop()" class="footer-btn">Shop</button>
-        </footer>
     </div>
-    <!-- Script -->
-    <script src="app.js"></script>
-    <script src="src/tower.js"></script>
-    <script src="src/enemy.js"></script>
-    <script src="src/game.js"></script>
-    
+    <script src="game.js"></script>
 </body>
 </html>
